environments/gloo-gateway/gateway-api/1.17/with-istio-sidecar/client-app/base/not-in-mesh-delegate-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: not-in-mesh-delegate-route
  namespace: client
spec:
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /not-in-mesh
      backendRefs:
        - name: not-in-mesh-client
          port: 5000
          weight: 100
